# ShortStack

./: .gitignore  CLAUDE.md  Makefile  README.md  app-icon.icns  clean_llm_changes.py  llm_context.py  package-lock.json  package.json  step_verifier.py  vite.config.ts
.github/workflows/: release.yaml
src/: App.css  App.tsx  index.html  types.ts
src-tauri/: Cargo.toml  build.rs  mesh.py  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-gmsh.json
src-tauri/src/: geometry.rs  lib.rs  main.rs  optimizer.rs
src-tauri/src/cpp/: bindings.cpp
src-tauri/src/fem/: gmsh_interop.rs  material.rs  mesh.rs  mesh_utils.rs  mod.rs  quadrature.rs  regularizer.rs  tests.rs  tet10.rs  tetgen.rs
src/components/: ExpressionEditor.css  ExpressionEditor.tsx  FabricationEditor.css  FabricationEditor.tsx  Footprint3DView.tsx  FootprintEditor.css  FootprintEditor.tsx  FootprintLibrary.css  FootprintLibrary.tsx  FootprintPropertiesPanel.tsx  FootprintRenderers.tsx  Icons.tsx  Layout3DView.tsx  LayoutEditor.css  LayoutEditor.tsx  ParametersEditor.tsx  PropertiesPanel.tsx  ShapeListPanel.tsx  SimulationEditor.tsx  StackupEditor.tsx  SurfaceRenderer.tsx  TetrahedralRenderer.tsx  Unified3DView.tsx  Viewer2D.tsx
src/hooks/: useUndoHistory.ts
src/utils/: exportUtils.ts  footprintUtils.ts  splitUtils.ts
src/workers/: fileOperations.ts  layerOperations.ts  meshUtils.ts  meshWorker.ts  proceduralTool.ts  toolpathOperations.ts
