[package]
name = "shortstack"
version = "0.5.2"
description = "ShortStack CAD"
authors = ["you"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1.2.53"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
svg = "0.18.0"
csgrs = "0.20.1"
geo = "0.29.3"
tauri-plugin-process = "2"
cmaes = "0.2"
nalgebra = "0.34.1"
rayon = "1.8"
uuid = { version = "1", features = ["v4"] }
faer = "0.23.2"
approx = "0.5.1"
meshopt = "0.6.2"
bytemuck = "1.24"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
